# FFmpegVideoDecode

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/ffmpegva/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/ffmpegva/: MainActivity.java  WonderfulPlayer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/ffmpegva/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
